fixed responsiveness on smaller screens

--- a/src/components/cart/cart-dropdown/cartDropdown.module.scss
+++ b/src/components/cart/cart-dropdown/cartDropdown.module.scss
@@ -29,4 +29,10 @@
   button {
     width: 100%;
   }
+
+  @media screen and (max-width: 800px) {
+    & {
+      width: 250px;
+    }
+  }
 }
