--- a/src/components/collection/collection-item/collection-item.module.scss
+++ b/src/components/collection/collection-item/collection-item.module.scss
@@ -18,6 +18,16 @@
     }
   }
 
+  @media screen and (max-width: 800px) {
+    &:hover {
+      opacity: 1;
+
+      .addToCartBtn {
+        animation: none;
+      }
+    }
+  }
+
   .image {
     width: 100%;
     height: 95%;
@@ -58,6 +68,21 @@
 
     &:hover {
       background-color: #000;
+    }
+
+    @media screen and (max-width: 800px) {
+      & {
+        position: relative;
+        top: 0;
+        margin-bottom: 12px;
+        opacity: 1;
+        border: 1px solid #555;
+      }
+
+      &:hover {
+        background-color: #fff;
+        color: #000;
+      }
     }
   }
 }
