--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -24,4 +24,11 @@
       cursor: pointer;
     }
   }
+
+  @media screen and (max-width: 500px) {
+    & {
+      padding: 0 10px;
+      text-align: center;
+    }
+  }
 }
