--- a/src/containers/checkoutPage/checkoutPage.module.scss
+++ b/src/containers/checkoutPage/checkoutPage.module.scss
@@ -20,5 +20,16 @@
         padding: 10px 0;
       }
     }
+
+    @media screen and (max-width: 500px) {
+      & {
+        flex-direction: column;
+        align-items: center;
+
+        .testCreditCardInfo {
+          margin-bottom: 20px;
+        }
+      }
+    }
   }
 }
