--- a/src/index.scss
+++ b/src/index.scss
@@ -14,10 +14,10 @@ body {
     }
   }
 
-  @media (max-width: 850px) {
+  @media (max-width: 750px) {
     & {
-      padding-left: 20px;
-      padding-right: 20px;
+      padding-left: 10px;
+      padding-right: 10px;
     }
   }
 }
